# advanced-cplusplus

ReinterpretCast/: CMakeLists.txt
david/: .gitignore
david/Advanced_cpp_udemy/: Advanced_cpp_udemy.sln  CMakeLists.txt  lecture_003_exceptions.cpp  lecture_004_exceptions.cpp  lecture_005_custom_exceptions.cpp  lecture_008_reading_text_files.cpp  lecture_009_parsing_text_files.cpp  lecture_010_structs_and_padding.cpp  lecture_011_reading_and_writing_binary_files.cpp  lecture_012_vectors.cpp  lecture_039_decltype_typeid_and_name_mangling.cpp  lecture_041_range_based_loop.cpp  lecture_042_nested_template_classes.cpp  lecture_043_a_ring_buffer_class.cpp  lecture_044_making_classes_iterable.cpp  lecture_045_initialization_in_cpp_98.cpp  lecture_046_initialization_in_cpp_11.cpp  lecture_047_initializer_lists.cpp  lecture_048_object_initialization_default_and_delete.cpp  lecture_049_introduction_lambda_expressions.cpp  lecture_050_lambda_parameters_and_return_type.cpp  lecture_051_lambda_capture_expressions.cpp  lecture_052_capturing_this_with_lambdas.cpp  lecture_053_the_standard_function_type.cpp  lecture_069_shared_pointers.cpp  polymorphism.cpp  ring.h  ring043.h  ring044.h  ring_template.h
david/Advanced_cpp_udemy/exceptions_project_lecture_04/: exceptions_project_lecture_04.vcxproj
david/Advanced_cpp_udemy/execptions_proect_01/: execptions_proect_01.vcxproj  execptions_proect_01.vcxproj.filters
david/Advanced_cpp_udemy/lecture_005_custom_exceptions/: lecture_005_custom_exceptions.vcxproj
david/Advanced_cpp_udemy/lecture_007_writing_text_files/: lecture_007_writing_text_files.cpp  lecture_007_writing_text_files.vcxproj  lecture_007_writing_text_files.vcxproj.filters  text.txt
david/Advanced_cpp_udemy/lecture_008_reading_text_files/: lecture_008_reading_text_files.vcxproj  lecture_008_reading_text_files.vcxproj.filters
david/Advanced_cpp_udemy/lecture_009_parsing_text_files/: lecture_009_parsing_text_files.vcxproj  lecture_009_parsing_text_files.vcxproj.filters  stats.txt
david/Advanced_cpp_udemy/lecture_010_structs_and_padding/: lecture_010_structs_and_padding.vcxproj  lecture_010_structs_and_padding.vcxproj.filters
david/Advanced_cpp_udemy/lecture_011_reading_and_writing_binary_files/: lecture_011_reading_and_writing_binary_files.vcxproj  lecture_011_reading_and_writing_binary_files.vcxproj.filters
david/Advanced_cpp_udemy/lecture_012_vectors/: lecture_012_vectors.vcxproj  lecture_012_vectors.vcxproj.filters
david/Advanced_cpp_udemy/lecture_013_vectors_and_memory/: lecture_013_vectors_and_memory.cpp  lecture_013_vectors_and_memory.vcxproj  lecture_013_vectors_and_memory.vcxproj.filters
david/Advanced_cpp_udemy/lecture_014_two_dimensional_vectors/: lecture_014_two_dimensional_vectors.cpp  lecture_014_two_dimensional_vectors.vcxproj  lecture_014_two_dimensional_vectors.vcxproj.filters
david/Advanced_cpp_udemy/lecture_039_decltype_typeid_and_name_mangling/: lecture_039_decltype_typeid_and_name_mangling.cpp  lecture_039_decltype_typeid_and_name_mangling.vcxproj  lecture_039_decltype_typeid_and_name_mangling.vcxproj.filters
david/Advanced_cpp_udemy/lecture_040_the_auto_keyword/: lecture_040_the_auto_keyword.cpp  lecture_040_the_auto_keyword.vcxproj  lecture_040_the_auto_keyword.vcxproj.filters
david/Advanced_cpp_udemy/lecture_068_unique_pointers/: lecture_068_unique_pointers.cpp  lecture_068_unique_pointers.vcxproj  lecture_068_unique_pointers.vcxproj.filters
david/Advanced_cpp_udemy/lecture_069_shared_pointers/: lecture_069_shared_pointers.vcxproj  lecture_069_shared_pointers.vcxproj.filters
david/Advanced_cpp_udemy/memory_leaks/: memory_leaks.cpp  memory_leaks.vcxproj  memory_leaks.vcxproj.filters
david/Exceptions_Section/: Advanced_cpp_udemy.sln
david/Exceptions_Section/lecture_003_exceptions/: lecture_003_exceptions.cpp  lecture_003_exceptions.vcxproj  (+1 more)
(+5 files in other folders)
