cmake_minimum_required(VERSION 3.0.0)

project(advanced_cpp_solution VERSION 1.0.0)


add_executable(lecture_003_exceptions lecture_003_exceptions.cpp)
add_executable(lecture_004_exceptions lecture_004_exceptions.cpp)
add_executable(lecture_005_custom_exceptions lecture_005_custom_exceptions.cpp)
add_executable(lecture_007_writing_text_files lecture_007_writing_text_files.cpp)
add_executable(lecture_008_reading_text_files lecture_008_reading_text_files.cpp)
add_executable(lecture_009_parsing_text_files lecture_009_parsing_text_files.cpp)
add_executable(lecture_010_structs_and_padding lecture_010_structs_and_padding.cpp)
add_executable(lecture_011_reading_and_writing_binary_files lecture_011_reading_and_writing_binary_files.cpp)
add_executable(lecture_012_vectors lecture_012_vectors.cpp)
add_executable(lecture_013_vectors_and_memory lecture_013_vectors_and_memory.cpp)
add_executable(lecture_014_two_dimensional_vectors lecture_014_two_dimensional_vectors.cpp)
add_executable(lecture_039_decltype_typeid_and_name_mangling lecture_039_decltype_typeid_and_name_mangling.cpp)
add_executable(lecture_040_the_auto_keyword lecture_040_the_auto_keyword.cpp)
add_executable(lecture_041_range_based_loop lecture_041_range_based_loop.cpp)
add_executable(lecture_042_nested_template_classes lecture_042_nested_template_classes.cpp ring.h ring_template.h)
add_executable(lecture_043_a_ring_buffer_class lecture_043_a_ring_buffer_class.cpp ring043.h)
add_executable(lecture_044_making_classes_iterable lecture_044_making_classes_iterable.cpp ring044.h)
add_executable(lecture_045_initialization_in_cpp_98 lecture_045_initialization_in_cpp_98.cpp)
add_executable(lecture_046_initialization_in_cpp_11 lecture_046_initialization_in_cpp_11.cpp)
add_executable(lecture_047_initializer_lists lecture_047_initializer_lists.cpp)
add_executable(lecture_048_object_initialization_default_and_delete lecture_048_object_initialization_default_and_delete.cpp)
add_executable(lecture_049_introduction_lambda_expressions lecture_049_introduction_lambda_expressions.cpp)
add_executable(lecture_050_lambda_parameters_and_return_type lecture_050_lambda_parameters_and_return_type.cpp)
add_executable(lecture_051_lambda_capture_expressions lecture_051_lambda_capture_expressions.cpp)
add_executable(lecture_052_capturing_this_with_lambdas lecture_052_capturing_this_with_lambdas.cpp)
add_executable(lecture_053_the_standard_function_type lecture_053_the_standard_function_type.cpp)
add_executable(lecture_054_mutable_lambdas lecture_054_mutable_lambdas.cpp)
add_executable(lecture_055_delegating_constructors lecture_055_delegating_constructors.cpp)
add_executable(lecture_056_elision_and_optimization lecture_056_elision_and_optimization.cpp)
add_executable(lecture_057_constructors_and_memory lecture_057_constructors_and_memory.cpp)
add_executable(lecture_058_Rvalues_and_Lvalues lecture_058_Rvalues_and_Lvalues.cpp)
add_executable(lecture_059_Lvalue_references lecture_059_Lvalue_references.cpp)
add_executable(lecture_060_Rvalue_references lecture_060_Rvalue_references.cpp)
add_executable(lecture_061_move_constructors lecture_061_move_constructors.cpp)
add_executable(lecture_062_move_assignment_operator lecture_062_move_assignment_operator.cpp)
add_executable(lecture_063_static_casts lecture_063_static_casts.cpp)
add_executable(lecture_064_dynamic_casts lecture_064_dynamic_casts.cpp)
add_executable(lecture_065_reinterpret_cast lecture_065_reinterpret_cast.cpp)
add_executable(lecture_066_perfect_forwarding lecture_066_perfect_forwarding.cpp)
add_executable(lecture_067_bind lecture_067_bind.cpp)
add_executable(lecture_068_unique_pointers lecture_068_unique_pointers.cpp)
add_executable(lecture_069_shared_pointers lecture_069_shared_pointers.cpp)



